--- a/src/obfuscator/templates/obfuscator/index.html
+++ b/src/obfuscator/templates/obfuscator/index.html
@@ -11,7 +11,8 @@
 
   <body>
     <header>
-      <h1>Photo obfuscator</h1>
+      <div class="aligncenter"><h1>Photo obfuscator</h1></div>
+      <div class="alignright">Hello, Participant<br>1234</div>
     </header>
 
     <div class="main-area">
