Added pixelation functionality.

--- a/obfuscator/templates/obfuscator/display.html
+++ b/obfuscator/templates/obfuscator/display.html
@@ -16,10 +16,14 @@
     </header>
 
     <div class="main-area">
-        <div class="after upload">
           <img style="max-width: 45%; max-height: 60%;" src="{{ participant.participant_photo.url}}">
-        </div>
-    </div>
 
+          <img style="max-width: 45%; max-height: 60%;" src="{{ participant.participant_blur.url}}">
+
+          <img style="max-width: 45%; max-height: 60%;" src="{{ participant.participant_photo.url}}">
+
+          <img style="max-width: 45%; max-height: 60%;" src="{{ participant.participant_pixel.url}}">
+
+    </div>
   </body>
 </html>
