--- a/obfuscator/templates/obfuscator/display.html
+++ b/obfuscator/templates/obfuscator/display.html
@@ -20,7 +20,7 @@
 
           <img style="max-width: 45%; max-height: 60%;" src="{{ participant.participant_blur.url}}">
 
-          <img style="max-width: 45%; max-height: 60%;" src="{{ participant.participant_photo.url}}">
+          <img style="max-width: 45%; max-height: 60%;" src="{{ participant.participant_faces.url}}">
 
           <img style="max-width: 45%; max-height: 60%;" src="{{ participant.participant_pixel.url}}">
 
