--- a/obfuscator/templates/obfuscator/display.html
+++ b/obfuscator/templates/obfuscator/display.html
@@ -18,9 +18,9 @@
     <div class="main-area">
 
 
-          <img style="max-width: 45%; max-height: 60%;" src="{{ participant.participant_photo.url}}">
+          <img  src="{{ participant.participant_photo.url}}">
 
-          <img style="max-width: 45%; max-height: 60%;" src="{{ participant.participant_faces.url}}">
+          <img  src="{{ participant.participant_faces.url}}">
           <form method="POST">
               {% csrf_token %}
               {{ form.as_p }}
@@ -28,8 +28,8 @@
           </form>
 
         {% if display %}
-          <img style="max-width: 45%; max-height: 60%;" src="{{ participant.participant_blur.url}}">
-          <img style="max-width: 45%; max-height: 60%;" src="{{ participant.participant_pixel.url}}">
+          <img  src="{{ participant.participant_blur.url}}">
+          <img  src="{{ participant.participant_pixel.url}}">
         {% endif %}
 
 
