--- a/obfuscator/templates/obfuscator/display.html
+++ b/obfuscator/templates/obfuscator/display.html
@@ -1,6 +1,7 @@
 {% load static %}
 
 <link rel="stylesheet" type="text/css" href="{% static 'obfuscator/style.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'obfuscator/header.css' %}">
 
 <!DOCTYPE html>
 <html lang="en">
@@ -10,21 +11,35 @@
   <head>
 
   <body>
-    <header>
-      <div class="aligncenter"><h1>Photo obfuscator</h1></div>
-      <div class="alignright">Hello, Participant <p>{{ participant.participant_id}}</p></div>
-    </header>
+    <div class="topnav">
+      <div class="topnav-centered">
+       <div class="search">Photo Obfuscator</div>
+      </div>
+
+      <!-- Right-aligned links -->
+      <div class="topnav-right">
+        <div class="search">Hello, Participant <p>{{ participant.participant_id}}</p></div>
+      </div>
+    </div>
 
     <div class="main-area">
-
-
-          <img style="max-width: 45%; max-height: 60%;" src="{{ participant.participant_photo.url}}">
-          <img style="max-width: 45%; max-height: 60%;" src="{{ participant.participant_faces.url}}">
+      <div class="grid">
+        <div class="column">Original photo
+          <img src="{{ participant.participant_photo.url}}">
+        </div>
+        <div class="column">Faces located
+          <img src="{{ participant.participant_faces.url}}">
           <form method="POST">
               {% csrf_token %}
               {{ form.as_p }}
               <input type="submit" value="Submit">
           </form>
+        </div>
+        <div class="column"></div>
+        <div class="column"></div>
+      </div>
+
+
 
         {% if display %}
           <img style="max-width: 45%; max-height: 60%;" src="{{ participant.participant_blur.url}}">
