--- a/obfuscator/templates/obfuscator/index.html
+++ b/obfuscator/templates/obfuscator/index.html
@@ -18,7 +18,7 @@
 
       <!-- Right-aligned links -->
       <div class="topnav-right">
-        <div class="search"> Hello, Participant <p id="uid"></p></div>
+        <div class="search"> Hello, Participant</div>
       </div>
     </div>
 
