--- a/obfuscator/templates/obfuscator/display.html
+++ b/obfuscator/templates/obfuscator/display.html
@@ -18,7 +18,7 @@
 
       <!-- Right-aligned links -->
       <div class="topnav-right">
-        <div class="search">Hello, Participant <p>{{ participant.participant_id}}</p></div>
+        <div class="search"><i>Participant ID:   </i><u>{{ participant.participant_id}}</u></div>
       </div>
     </div>
 
@@ -49,7 +49,7 @@
               </div>
 
               <div class="column">DeepFake
-                <img src="{{ participant.participant_deepfake.url}}">
+                <!-- <img src="{{ participant.participant_deepfake.url}}"> -->
               </div>
           {% endif %}
       </div>
