--- a/obfuscator/templates/obfuscator/display.html
+++ b/obfuscator/templates/obfuscator/display.html
@@ -49,7 +49,7 @@
               </div>
 
               <div class="column">DeepFake
-                <!-- <img src="{{ participant.participant_deepfake.url}}"> -->
+                <img src="{{ participant.participant_deepfake.url}}">
               </div>
           {% endif %}
       </div>
