--- a/obfuscator/templates/obfuscator/index.html
+++ b/obfuscator/templates/obfuscator/index.html
@@ -31,7 +31,8 @@
         <br><p><center><form method = "post" enctype="multipart/form-data">
             {% csrf_token %}
             <table>
-              {{ form.as_table }}
+              {{ participant_form.as_table }}
+              {{ photo_form.as_table }}
             </table>
             <!-- {{ form.as_p }} -->
             <button type="submit">Upload</button>
