--- a/obfuscator/static/obfuscator/style.css
+++ b/obfuscator/static/obfuscator/style.css
@@ -14,6 +14,11 @@ body{
   margin-top: 60px;
 }
 
+.small-text{
+  display: block;
+  font-size: 1rem;
+}
+
 .before-upload>p{
   text-align: center;
   margin-left: 30%;
@@ -87,4 +92,8 @@ ul.errorlist {
 #id_face_choices{
   padding-left: 0;
   margin: 0;
+}
+
+form{
+  margin-block-end: 0.3rem;
 }
