--- a/obfuscator/templates/obfuscator/display.html
+++ b/obfuscator/templates/obfuscator/display.html
@@ -8,6 +8,8 @@
   <head>
     <meta charset="utf-8">
     <title>Photo Obfuscator</title>
+    <script src="http://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
+     <script src="../../static/obfuscator/jquery.loading.block.js"></script>
   <head>
 
   <body>
@@ -36,7 +38,7 @@
                   <table>
                     {{ form.as_table }}
                   </table>
-                  <input type="submit" value="Hide selected faces">
+                  <button type="submit" onclick="myFunction()">Obfuscate selected</button>
               </form>
               <form method = "post" enctype="multipart/form-data">
                   {% csrf_token %}
@@ -62,5 +64,17 @@
           {% endif %}
       </div>
     </div>
+
+
+    <script type="text/javascript" charset="utf-8">
+      function myFunction() {
+        if ($("input[type=checkbox]:checked").length > 0){
+          $.loadingBlockShow({
+              imgPath: '../../static/obfuscator/icon.gif'
+          });
+        }
+          // setTimeout($.loadingBlockHide, 5000);
+      };
+    </script>
   </body>
 </html>
