--- a/obfuscator/templates/obfuscator/index.html
+++ b/obfuscator/templates/obfuscator/index.html
@@ -8,6 +8,8 @@
   <head>
     <meta charset="utf-8">
     <title>Photo Obfuscator</title>
+    <script src="http://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
+    <script src="../../static/obfuscator/jquery.loading.block.js"></script>
   <head>
 
   <body>
@@ -30,15 +32,28 @@
            you upload. Try it and give us feedback!</p>
         <br><p><center><form method = "post" enctype="multipart/form-data">
             {% csrf_token %}
+
             <table>
               {{ participant_form.as_table }}
               {{ photo_form.as_table }}
             </table>
-            <button type="submit">Upload</button>
+            <button type="submit" onclick="showLoadingMsg()">Upload</button>
         </form></center></p>
         </div>
 
     </div>
+
+    <script type="text/javascript" charset="utf-8">
+      function showLoadingMsg() {
+        var show=document.getElementById("id_participant_photo").files.length;
+        console.log(show);
+        if (show === 1 ){
+          $.loadingBlockShow({
+              imgPath: '../../static/obfuscator/icon.gif'
+          });
+        }
+       };
+    </script>
 
   </body>
 </html>
