Added emoji(avatar) obfuscation.

--- a/obfuscator/templates/obfuscator/display.html
+++ b/obfuscator/templates/obfuscator/display.html
@@ -65,6 +65,10 @@
               <div class="column">Masking
                 <img src="{{ photo.participant_masked.url}}">
               </div>
+
+              <div class="column">Avatar (emoji)
+                <img src="{{ photo.participant_avatar.url}}">
+              </div>
           {% endif %}
       </div>
     </div>
