Added automatic scoll down when displaying obfuscations.

--- a/obfuscator/templates/obfuscator/display.html
+++ b/obfuscator/templates/obfuscator/display.html
@@ -83,6 +83,11 @@
           });
         }
        };
+
+
+       $( document ).ready(function() {
+            $(window).scrollTop(300);
+       });
     </script>
   </body>
 </html>
