--- a/obfuscator/static/obfuscator/style.css
+++ b/obfuscator/static/obfuscator/style.css
@@ -25,16 +25,48 @@ body{
   margin-right: 30%;
 }
 
-.grid {
+/*.grid {
   display: grid;
   grid-template-columns: repeat(2, 50%);
   grid-column-gap: 10px;
   margin: 0px 10px 0px 10px;
-}
+}*/
 
 .column{
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
+  display: block;
+  float: left;
+  margin: 1% 0.5% 1% 0.5%;
 }
+
+/*.column:first-child {margin-left: 0.5%}*/
+
+/*  GROUPING  */
+.group:before,
+.group:after {
+  content: "";
+  display: table;
+}
+
+.group {
+  zoom: 1; /* For IE 6/7 */
+}
+
+.span_2 {
+  width: 49%;
+}
+
+.span_1 {
+  width: 49%;
+}
+
+/*  GO FULL WIDTH AT LESS THAN 480 PIXELS */
+
+@media only screen and (max-width: 1000px) {
+  .column {margin: 1% 3% 1% 3%}
+  .span_1, .span_2 {width: 95%}
+}
+
 
 li{
   justify-content: space-between;
@@ -50,9 +82,9 @@ ul {
     font-size: 1.3rem;
 }
 
-.grid img {
+.column img {
     width: 100%;
-    object-fit: cover;
+    /*object-fit: cover;*/
 }
 
 label {
