--- a/obfuscator/templates/obfuscator/index.html
+++ b/obfuscator/templates/obfuscator/index.html
@@ -8,6 +8,7 @@
   <head>
     <meta charset="utf-8">
     <title>Photo Obfuscator</title>
+    <link rel="shortcut icon" href="{% static 'obfuscator/favicon.ico' %}" />
     <script src="http://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
     <script src="../../static/obfuscator/jquery.loading.block.js"></script>
   <head>
