Fixed pixelation to pixelating in html.

--- a/obfuscator/templates/obfuscator/display.html
+++ b/obfuscator/templates/obfuscator/display.html
@@ -67,7 +67,7 @@
       </div>
 
       <div class="group">
-              <div class="column span_1">Pixelation
+              <div class="column span_1">Pixelating
                 <input type="button" value="Display/hide the pixelated photo" class="btn"/>
                 <img src="{{ photo.participant_pixel.url}}" class="image off">
               </div>
